--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Showroom Mobile 8</string>
+    <string name="home">Home</string>
+    <string name="pengelolaan_mobil">Pengelolaan Data Mobil</string>
+    <string name="setting">Setting</string>
 </resources>
